Deployment.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: eks-deploy
#spec:
#  replicas: 1
#  strategy:
#    type: RollingUpdate
#    rollingUpdate:
#      maxUnavailable: 2
#      maxSurge: 2
#  selector:
#    matchLabels:
#      app: eks
#  template:
#    metadata:
#      labels:
#        app: eks
#    spec:
#      containers:
#      - name: hello-k8s
#        image: AWS_ECR_URI
#        imagePullPolicy: Always
#        securityContext:
#          privileged: false
#          readOnlyRootFilesystem: true
#          allowPrivilegeEscalation: false
#        ports:
#        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: ECR_WEBF_IMAGE
        imagePullPolicy: Always
        securityContext:
          privileged: false
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: ECR_WEBB_IMAGE
        imagePullPolicy: Always
        securityContext:
          privileged: false
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 3100
