hello-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
    selector:
      matchLabels:
        app: hello-k8s
    template:
      metadata:
        labels:
          app: hello-k8s
      spec:
        containers:
        - name: hello-k8s
          image: 388265291349.dkr.ecr.ap-northeast-2.amazonaws.com/testing_goorm123:latest
          securityContext:
            privileged: false
            readOnlyRootfilesystem: true
            allowPrivilegeEscalation: false
          ports:
          - ContainerPort: 8080
