Service.yaml
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: eks-svc
#spec:
#  ports:
#  - port: 9001
#    targetPort: 8080
#  selector:
#    app: eks
#  type: NodePort
#
---
apiVersion: v1
kind: Service
metadata:
  name: ikuzo-web-front_svc
spec:
  ports:
    - name: ikuzo-web-front_port
      port: 9002
      targetPort: 3000
  selector:
    app: ikuzo-web-front
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: ikuzo-web-back_svc
spec:
  ports:
    - name: ikuzo-web-back_port
      port: 9003
      targetPort: 3100
  selector:
    app: ikuzo-web-back
  type: NodePort
