Service.yml
apiVersion: v1
type: LoadBalancer
kind: Service
metadata:
  name: eks-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: eks
