IngressIku.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ikuzo-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ikuzo-web-front-svc
                port:
                  number: 9002
          - path: /back
            pathType: Prefix
            backend:
              service:
                name: ikuzo-web-back-svc
                port:
                  number: 9003
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: eks-svc
#                port:
#                  number: 9001
