ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "simple-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /guest
            pathType: Prefix
            backend:
              service:
                name: "deploy2-guestsrv"
                port:
                  number: 9002
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: "deploy3-adminsrv"
                port:
                  number: 9003
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: eks-svc
#                port:
#                  number: 9001
